--- a/templates/results.html
+++ b/templates/results.html
@@ -5,8 +5,17 @@
     <title>Results</title>
 </head>
 <body>
-<input type="text">
-<button type="submit">Search</button>
-{{ docs }}
+<form action="{{ url_for('search')}}" method="get">
+    <input type="text" name="query">
+    <input type="submit" value="Search">
+</form>
+  {% for doc in docs[:10]%}
+        <div onclick="{{ url_for('getdoc', docid=doc[1].id) }}" >
+          <h4>{{ doc[1].title }}</h4>
+          <p>{{ doc[1].body[:100] }}</p>
+        </div>
+  {% endfor %}
 </body>
+
 </html>
+
